updating examples and readme

--- a/examples/sample.ipynb
+++ b/examples/sample.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "name": "tableQA.ipynb",
-      "provenance": []
+      "provenance": [],
+      "toc_visible": true
     },
     "kernelspec": {
       "name": "python3",
@@ -16,8 +17,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "K4qXc2S4DZrz",
-        "colab_type": "text"
+        "id": "K4qXc2S4DZrz"
       },
       "source": [
         "## tableQA\n",
@@ -38,9 +38,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "rKRfWRaB-e0H",
-        "colab_type": "code",
-        "colab": {}
+        "id": "rKRfWRaB-e0H"
       },
       "source": [
         "! pip install tableqa"
@@ -51,9 +49,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "O8en70TQ_AA5",
-        "colab_type": "code",
-        "colab": {}
+        "id": "O8en70TQ_AA5"
       },
       "source": [
         "! git clone https://github.com/abhijithneilabraham/tableQA/\n",
@@ -66,12 +62,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "d3BqR3zeDGgp",
-        "colab_type": "code",
+        "outputId": "8c305a86-87ea-48b6-9ce0-36e84a953711",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 195
-        },
-        "outputId": "8c305a86-87ea-48b6-9ce0-36e84a953711"
+        }
       },
       "source": [
         "import pandas as pd\n",
@@ -80,7 +75,7 @@
         "# A first look at data\n",
         "df.head()"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -189,8 +184,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "jNONpdnwFfgr",
-        "colab_type": "text"
+        "id": "jNONpdnwFfgr"
       },
       "source": [
         "- You can see the file we are trying to query is a CSV file with columns like Year, Nationality, Gender, Cancer Site, Death Count, age. Let's try to answer some questions from this dataset.\n",
@@ -201,14 +195,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "d0mx-dA2A1mf",
-        "colab_type": "code",
-        "colab": {}
+        "id": "d0mx-dA2A1mf"
       },
       "source": [
         "from tableqa.agent import Agent\n",
         "\n",
-        "agent = Agent(\"/content/tableQA/tableqa/cleaned_data\")"
+        "agent = Agent(df)"
       ],
       "execution_count": null,
       "outputs": []
@@ -216,8 +208,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "9-xLcEqkHH1F",
-        "colab_type": "text"
+        "id": "9-xLcEqkHH1F"
       },
       "source": [
         "Let's try answering a important question from this dataset like:\n",
@@ -229,17 +220,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "nNUlcvjNCAMt",
-        "colab_type": "code",
+        "outputId": "b685ed28-831c-41b7-a9dd-dcee5ba104f3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "b685ed28-831c-41b7-a9dd-dcee5ba104f3"
+        }
       },
       "source": [
         "agent.query_db(\"how many deaths of age below 40 had breast cancer?\")"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -258,8 +248,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "lWliiZg9GOiy",
-        "colab_type": "text"
+        "id": "lWliiZg9GOiy"
       },
       "source": [
         "- You can see that **426 people** below age 40 died with stomach cancer\n",
@@ -271,17 +260,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "7aHWgkFvBzze",
-        "colab_type": "code",
+        "outputId": "21eccd2e-1c1f-4ea6-cd01-62c9beaa589a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "21eccd2e-1c1f-4ea6-cd01-62c9beaa589a"
+        }
       },
       "source": [
         "agent.get_query(\"how many deaths of age below 40 had breast cancer?\")"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -303,8 +291,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "L2V5YgLXHfIG",
-        "colab_type": "text"
+        "id": "L2V5YgLXHfIG"
       },
       "source": [
         "- Let's try another question:\n",
@@ -316,17 +303,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "dzZMvn5XCpB9",
-        "colab_type": "code",
+        "outputId": "d1ee0eee-472f-47cc-9dc1-70dee9426966",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "d1ee0eee-472f-47cc-9dc1-70dee9426966"
+        }
       },
       "source": [
         "agent.query_db(\"Get me the average death count per year of stomach cancer deaths?\")"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -345,8 +331,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "Ois6kYZA7ex-",
-        "colab_type": "text"
+        "id": "Ois6kYZA7ex-"
       },
       "source": [
         "Using a manual schema can improve the perfomance, i.e , you can give keywords related to the csv names or column names, which allows the user to have more control over the output. A schema format can be seen below:"
@@ -355,9 +340,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "tN3JF--28k30",
-        "colab_type": "code",
-        "colab": {}
+        "id": "tN3JF--28k30"
       },
       "source": [
         "Schema Format:\n",
@@ -392,8 +375,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "IMJm8ZgU8lyT",
-        "colab_type": "text"
+        "id": "IMJm8ZgU8lyT"
       },
       "source": [
         "-\"Mappings\" are for those columns whose values have only few distinct classes.i.e, Gender in the above cancer death data have only two distinct classes, Male and Female.\n",
@@ -409,12 +391,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "l4KXiCI29Hs2",
-        "colab_type": "code",
+        "outputId": "f31003dc-69a3-46fe-a5f9-e14e935b6333",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 54
-        },
-        "outputId": "f31003dc-69a3-46fe-a5f9-e14e935b6333"
+        }
       },
       "source": [
         "import json\n",
@@ -422,7 +403,7 @@
         "schema_file=json.load(file)\n",
         "print(schema_file)"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -436,8 +417,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "tW_8FZsz9_iy",
-        "colab_type": "text"
+        "id": "tW_8FZsz9_iy"
       },
       "source": [
         "Using a schema:"
@@ -446,31 +426,28 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ICmG2dNY99YA",
-        "colab_type": "code",
-        "colab": {}
+        "id": "ICmG2dNY99YA"
       },
       "source": [
-        "agent = Agent(\"/content/tableQA/tableqa/cleaned_data\",\"/content/tableQA/tableqa/schema\")"
+        "agent = Agent(df,schema_file)"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "JiGTL7vF_09l",
-        "colab_type": "code",
+        "outputId": "0bf0d2b6-eda3-4b36-92b1-454884c9b01a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "0bf0d2b6-eda3-4b36-92b1-454884c9b01a"
+        }
       },
       "source": [
         "agent.query_db(\"how many deaths of age below 40 had breast cancer?\")"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -489,8 +466,30 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "iI4l4IeiIAX5",
-        "colab_type": "text"
+        "id": "qMaKg2rEm70D"
+      },
+      "source": [
+        "You can also input multiple csvs and schemas and detect the corresponding csv,by giving the absolute path to the directories of  csvs and their respective schemas as shown below. Using a schema is optional."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HxA1qiutm5fB"
+      },
+      "source": [
+        "csv_path=\"/content/tableQA/tableqa/cleaned_data\"\n",
+        "schema_path=\"/content/tableQA/tableqa/schema\"\n",
+        "\n",
+        "agent=Agent(csv_path,schema_path)\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "iI4l4IeiIAX5"
       },
       "source": [
         "If you liked this project, feel free to give a ⭐ in the [github repository](https://github.com/abhijithneilabraham/tableQA). Learn about more of it's features in the [README](https://github.com/abhijithneilabraham/tableQA/blob/master/README.md)."
